<resources>
    <string name="app_name">LoanApp</string>
    <!-- Строки для логина -->
    <string name="login_header" translatable="false">Loan app</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_goto_register">Sign up</string>
    <string name="register_header">Sign up with your credentials</string>
    <string name="button_register">Sign up</string>

    <!-- Плейсхолдер строки полного имени, конкантенирующий имя и фамилию -->
    <string name="full_name" translatable="false">%1$s %2$s</string>
    <string name="loan_approved">Approved</string>
    <string name="loan_registered">Registered</string>
    <string name="loan_rejected">Rejected</string>
    <string name="loan_status_image_description">Loan status image</string>
    <string name="loan_tutorial">Press the "+" button to make new loan.</string>

    <!--Loan details-->
    <string name="loan_date">Loan by %1$s</string>
    <string name="loan_borrower_info">Info about borrower</string>
    <string name="loan_info">Info about loan</string>
    <string name="loan_how_to_get">How to get your loan</string>
    <string name="loan_instructions">Please wait for the call for further instructions.</string>
    <string name="loan_amount">Amount: %1$d ₽</string>
    <string name="loan_amount_number" translatable="false">%1$d ₽</string>
    <string name="loan_period">Period: %1$d d.</string>
    <string name="loan_repayment">Need to repay %1$.2f ₽ before %2$s</string>
    <string name="plus" translatable="false">+</string>
    <string name="equals" translatable="false">=</string>
    <string name="loan_percent">Interest rate: %1$.2f %%</string>

    <string name="loan_create_header">Create loan</string>
    <string name="loan_create_amount_header">Loan amount</string>
    <string name="loan_create_amount_description">Choose amount</string>
    <string name="loan_create_amount" translatable="false">%1$d ₽</string>
    <string name="loan_create_period">Loan period: %1$d d.</string>
    <string name="loan_create_repayment_date">Needs to be repaid before %1$s</string>
    <string name="loan_create_percent">Interest rate: %1$.2f %%</string>
    <string name="loan_create_total">Total:</string>
    <string name="loan_create_amount_number" translatable="false">%1$d ₽</string>
    <string name="loan_create_amount_empty" translatable="false">0 ₽</string>
    <string name="loan_create_percent_number" translatable="false">%1$.2f ₽</string>
    <string name="loan_create_total_number" translatable="false">%1$.2f ₽</string>
    <string name="loan_create_amount_sub">Loan amount</string>
    <string name="loan_create_percent_sum_sub">Rate</string>
    <string name="loan_create_total_sub">Total</string>
    <string name="loan_create_credentials_header">Please input your credentials:</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_phone">Phone</string>
    <string name="button_loan_create">Create loan</string>

    <string name="loan_created">Loan created successfully!</string>
    <string name="loan_created_got_it">Got it</string>
    <string name="loan_created_instructions">Please wait for your application to be approved. We will contact you shortly.</string>

    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_update">Update</string>

    <string name="settings_header">Settings</string>
    <string name="settings_language_button">Change language</string>
    <string name="settings_logout_button">Log out</string>

    <!-- Заголовки фрагментов-->
    <string name="label_loans_list">Loans</string>
    <string name="label_loan_details">Loan info</string>
    <string name="label_loan_creation">Create loan</string>
    <string name="label_loan_created">Loan created!</string>
    <string name="label_settings">Settings</string>

    <!-- Уведомления-->
    <string name="notification_channel_name">Loan repayment</string>
    <string name="notification_channel_description">Notifications about the need to repay the loan.</string>
    <string name="notification_title">Loan repayment</string>
    <string name="notification_message">Dear %1$s %2$s, please repay your loan before %3$s in amount of %4$.2f ₽.</string>

    <!-- Map языков:
    languages_keys[i] == languages[i]-->
    <string-array name="languages_keys">
        <item>en</item>
        <item>ru</item>
    </string-array>
    <string-array name="languages">
        <item>English</item>
        <item>Русский</item>
    </string-array>
</resources>